--- a/public/css/tap_row.css
+++ b/public/css/tap_row.css
@@ -1,9 +1,9 @@
 #stuff:nth-of-type(odd) {
-    background-color: #EEF0F0;
+    background-color: #2a4d14;
     /* background-color: #004d00; */
 }
 #stuff:nth-of-type(even) {
-    background-color: #EEFFFF;
+    background-color: #317b22;
     /* background-color: #006600; */
 }
 /* .striped:nth-of-type(odd) {
