--- a/public/css/tap_row.css
+++ b/public/css/tap_row.css
@@ -1,14 +1,13 @@
-#stuff:nth-of-type(odd) {
+.evenrow{
     background-color: #2a4d14;
     /* background-color: #004d00; */
-}
-#stuff:nth-of-type(even) {
+}    
+.oddrow{
     background-color: #317b22;
     /* background-color: #006600; */
 }
-/* .striped:nth-of-type(odd) {
-    background-color: #0000AF;
-} */
+
+
 
 .jumbotron {
   padding-top: 1%;
